--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
+header_pages:
+  - README.md
+  - about.md
