--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Vermont Zoning Atlas
 description: The Vermont Zoning Atlas is a web-based geospatial interface that visualizes zoning code distributions across all of Vermont.
-google_analytics:
+#google_analytics:
 
 repository: VERSO-UVM/Vermont-Zoning-Atlas
 # Build settings
@@ -53,7 +53,7 @@ minima:
   #  - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
   #  - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
   #  - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github,         user_url: "https://github.com/VERSO-UVM" }
+  #  - { platform: github,         user_url: "https://github.com/VERSO-UVM" }
   #  - { platform: gitlab,         user_url: "https://gitlab.com/jekyll" }
   #  - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
   #  - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
