--- a/_config.yml
+++ b/_config.yml
@@ -67,3 +67,7 @@ minima:
   #  - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
   #  - { platform: x,              user_url: "https://x.com/jekyllrb" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+
+
+  kramdown:
+  parse_block_html: true
